# guitar

./: Cargo.toml
guitar/: Cargo.toml
guitar/src/: constants.rs  guitar_string.rs  main.rs
random_context/: Cargo.toml
random_context/src/: lib.rs
scratchpad/: Cargo.toml
scratchpad/src/: lib.rs
src/: main.rs
